合并冲突部分

--- a/珞珈二手宝云开发/miniprogram/pages/home/home.wxss
+++ b/珞珈二手宝云开发/miniprogram/pages/home/home.wxss
@@ -1,148 +1,1 @@
-
-
-.home-container{
-  width: 100%;
-  height: 100%;
-  background: rgb(255, 255, 255);
-}
-
-/*  搜索框  */
-.home-search-bar{
-  width: 100%;
-  height: 50px;
-  background: lightblue;
-  padding: 10px;
-  box-sizing: border-box;
-  display: flex;
-}
-
-.home-search-input{
-  width: 100%;
-  height: 100%;
-  background: white;
-  font-size: 14px;
-  padding-left: 40px;
-  box-sizing: border-box;
-  display: flex;
-}
-
-.home-search-icon{
-  width: 30px;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: white;
-}
-
-/*  分类  */
-.home-type{
-  width: 100%;
-  height: 80px;
-  background: rgb(224, 224, 224);
-}
-
-/*  商品列表  */
-.home-list {
-  width: 100%;
-  background: #fff;
-  border: 2px solid #ccc;
-  border-radius: 10px;
-  margin: 0 20px;
-}
-
-.home-list-good {
-  background: #cdeffd;
-  border: 2px solid #ccc;
-  border-radius: 10px;
-  display: flex;
-}
-
-.home-list-good-head {
-  width: 50px;
-  height: 50px;
-  border: solid 0.05rem #34b3de;
-  border-radius: 50%;
-  overflow: hidden;
-  background-size: cover;
-  background-position: 50%;
-  background-color: #fff;
-  text-align: center;
-}
-
-.home-list-good-up {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  font-size: 14px;
-  padding: 0 10px;
-  box-sizing: border-box;
-}
-
-.home-list-good-up-name {
-  padding-left: 30px;
-  font-size: 18px;
-}
-
-.home-list-good-up-date {
-  padding-left: 30px;
-  font-size: 12px;
-  color: rgba(0, 0, 0, 0.76);
-}
-
-.home-list-good-price {
-  padding-left: 100px;
-  font-size: 20px;
-}
-
-.home-list-good-details {
-  background-color: #fff;
-  margin: 20px 30px;
-  letter-spacing: 1px;
-  font-size: 14px;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 5;
-  -webkit-box-orient: vertical;
-  text-overflow: ellipsis;
-  white-space: normal;
-}
-
-.home-list-good-img {
-  margin-left: 70px;
-}
-
-.home-list-good-image {
-  border: 2px solid #ccc;
-  border-radius: 10px;
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
-  display: inline-flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: center;
-  width: 20%;
-  margin: 20px 10px;
-  background-color: #fff;
-}
-
-.home-list-good-contact {
-  display: flex;
-  align-items: center;
-}
-
-.home-list-good-contact .icon-chato{
-  margin-left: 100px;
-}
-
-.home-list-good-contact .icon-contact{
-  margin-left: 40px;
-}
-
-.home-list-good-contact .icon-phone{
-  margin-left: 40px;
-}
-
-.home-list-good-contact .icon-star{
-  margin-left: 40px;
-}
-
+/* pages/home/home.wxss */
