--- a/LuoJiaSecondhandTreasure/miniprogram/pages/center-aboutus/center-aboutUs.wxss
+++ b/LuoJiaSecondhandTreasure/miniprogram/pages/center-aboutus/center-aboutUs.wxss
@@ -1,1 +1,26 @@
-/* pages/center-aboutUs/center-aboutUs.wxss */
+.whuicon{
+  padding: 40rpx;
+  display: flex;
+  justify-content: center;
+}
+.whuicon image{
+  width: 200rpx;
+  height: 200rpx;
+}
+
+.titleArea{
+  width: 100%;
+  /* background-color: white; */
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20rpx;
+}
+.title{
+  font-size: 40rpx;
+}
+.introduction{
+  font-size: 18px;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  text-indent: 2em;
+}
