--- a/LuoJiaSecondhandTreasure/miniprogram/pages/center-suggestions/center-suggestions.wxss
+++ b/LuoJiaSecondhandTreasure/miniprogram/pages/center-suggestions/center-suggestions.wxss
@@ -1,1 +1,28 @@
 /* pages/center-suggestions/center-suggestions.wxss */
+
+.complaint{
+  margin: 0;
+  padding: 0;
+}
+
+.title{
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+    margin-top: 75px;
+    margin-bottom: 40px;
+}
+.text-input {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 10px;
+  font-size: 18px;
+  color: #333;
+}
+
+.submitButton{
+  align-self: center;
+  width: 70%;
+  margin-bottom: 30rpx;
+  margin-top: 20px;
+}
