--- a/LuoJiaSecondhandTreasure/miniprogram/pages/center-myCollection/center-myCollection.wxml
+++ b/LuoJiaSecondhandTreasure/miniprogram/pages/center-myCollection/center-myCollection.wxml
@@ -1,2 +1,52 @@
-<!--pages/center-myCollection/center-myCollection.wxml-->
-<text>pages/center-myCollection/center-myCollection.wxml</text>
+<view class = "home-list" wx:for="{{dataList}}" wx:key="index">
+        <view class="home-list-good" wx:if="{{item.price!==-15432}}" >
+          <!-- 顶部信息 -->
+          <view class = "home-list-good-top">
+            <!-- 后面可以通过img组件来显示 -->
+            <view class = "home-list-good-head">
+              <van-image round width="100rpx" height="100rpx" fit="fill" src="{{item.headimg}}"></van-image>
+            </view>
+            <view class = home-list-good-up>
+              <view class="home-list-good-up-name">
+              {{item.publisher}}
+              </view>
+              <view class="home-list-good-up-date">
+              {{item.time}}
+              </view>
+            </view>
+            <view class = "home-list-good-price">
+              ¥{{item.price}}
+            </view>
+          </view>
+        <!-- 信息主要部分-->
+        <view class = "home-list-good-details">
+            <view class="home-list-good-details-information">{{item.information}}</view>
+              <view wx:for="{{item.imageFileList}}" wx:for-item="item1" wx:key="index" class="home-list-good-details-image">
+            <image width = "180rpx" height = "180rpx" src="{{item1.url}}" bindtap="toPreview" data-imageFileList="{{item.imageFileList}}" data-index="{{index}}"></image>
+            </view>
+          </view>
+          <!-- 功能图标模块 -->
+          <view class="home-list-good-contact">
+            <van-icon name="chat-o" size="30px" bind:click="getqqNum" data-qqnum="{{item.qqnum}}" class="icon-chato"/>
+            <van-icon name="contact" size="30px" bind:click="getwxNum" data-wxnum="{{item.wxnum}}" class="icon-contac"/>
+            <van-icon name="phone-o" size="30px" bind:click="getphoneNum" 
+            data-phonenum="{{item.phonenum}}" class="icon-phone"/>
+            <van-icon name="star-o" size="30px" bind:click="addcollection" data-item="{{item}}" data-index="{{index}}" class="icon-star"/>
+          </view>
+        </view>
+
+
+
+      <view class="home-list-good-none" wx:if="{{item.price==-15432}}">
+            <view class="icon-none">            
+            <van-icon name="revoke" size="30px" bind:click="addcollection" data-item="{{item}}" data-index="{{index}}" />
+            <view>撤销</view>
+            </view>
+
+      </view>
+
+
+      </view>
+      <view class="CollectionNumber">
+      您有{{clctList.length}}条收藏
+      </view>
