--- a/LuoJiaSecondhandTreasure/miniprogram/pages/center-settings/center-settings.wxml
+++ b/LuoJiaSecondhandTreasure/miniprogram/pages/center-settings/center-settings.wxml
@@ -12,7 +12,7 @@
       label="用户名"
       disabled
       placeholder="请输入用户名"
-      bind:input="handleUsernameInput"
+      bind:change="handleUsernameInput"
       />
       <van-field
       value="{{user[0].stunum}}"
@@ -20,15 +20,15 @@
       disabled
       label="学号"
       placeholder="请输入学号"
-      bind:input="handleStunumInput"
+      bind:change="handleStunumInput"
       />
       <van-field
       value="{{password}}"
       cleared
       label="修改密码"
       type="password"
-      placeholder="请输入密码(6位数以上）"
-      bind:input="handlePasswordInput"
+      placeholder="请输入6-16位密码"
+      bind:change="handlePasswordInput"
       />
       <van-field
       value="{{repassword}}"
@@ -36,28 +36,28 @@
       label="确认密码"
       type="password"
       placeholder="请确认密码"
-      bind:input="handleRepasswordInput"
+      bind:change="handleRepasswordInput"
       />
       <van-field
       value="{{user[0].phonenum}}"
       cleared
       label="手机号"
       placeholder="请输入手机号码"
-      bind:input="handlePhoneInput"
+      bind:change="handlePhoneInput"
       />
       <van-field
       value="{{user[0].qqnum}}"
       cleared
       label="QQ"
       placeholder="请输入QQ号码"
-      bind:input="handleQQnumInput"
+      bind:change="handleQQnumInput"
       />
       <van-field
       value="{{user[0].wxnum}}"
       cleared
       label="微信"
       placeholder="请输入微信号"
-      bind:input="handleWXnumInput"
+      bind:change="handleWXnumInput"
       />
     </van-cell-group>
   </view>
