--- a/LuoJiaSecondhandTreasure/miniprogram/pages/search/search.wxss
+++ b/LuoJiaSecondhandTreasure/miniprogram/pages/search/search.wxss
@@ -6,10 +6,10 @@
   left:0;
   bottom: 0;
   right: 0;
-  background-color: antiquewhite;
+  background-color: white;
 }
 .search-view-top{
-  width: 95%;
+  width: 100%;
   height: 100rpx;
   background-color: white;
 }
