--- a/LuoJiaSecondhandTreasure/miniprogram/pages/search/searchResult.wxml
+++ b/LuoJiaSecondhandTreasure/miniprogram/pages/search/searchResult.wxml
@@ -5,8 +5,11 @@
 placeholder="请输入搜索关键词"
 bindtap="gotoSearch"
  />
- 
- <view class = "home-list" wx:for="{{dataList}}" wx:key="index">
+
+ <view class = "home-type">
+  <van-tabs active="{{ active }}" bind:change="onChange">
+  <van-tab title="全部">
+      <view class = "home-list" wx:for="{{dataList}}" wx:key="index">
         <view class="home-list-good">
           <!-- 顶部信息 -->
           <view class = "home-list-good-top">
@@ -27,23 +30,223 @@ bindtap="gotoSearch"
             </view>
           </view>
         <!-- 信息主要部分-->
-          <view class = "home-list-good-details">
-            <view>{{item.information}}</view>
-            <view wx:for="{{item.imageFileList}}" wx:key="index">
-            <van-image width = "180rpx" height = "180rpx" src="{{item.url}}"></van-image>
-            
+        <view class = "home-list-good-details">
+            <view class="home-list-good-details-information">{{item.information}}</view>
+              <view wx:for="{{item.imageFileList}}" wx:for-item="item1" wx:key="index" class="home-list-good-details-image">
+            <image width = "180rpx" height = "180rpx" src="{{item1.url}}" bindtap="toPreview" data-imageFileList="{{item.imageFileList}}" data-index="{{index}}"></image>
             </view>
           </view>
           <!-- 功能图标模块 -->
           <view class="home-list-good-contact">
-            <van-icon name="chat-o" size="30px" bind:click="getqqNum" class="icon-chato"/>
-            <van-icon name="contact" size="30px" bind:click="getwxNum" class="icon-contac"/>
-            <van-icon name="phone-o" size="30px" bind:click="getphoneNum" class="icon-phone"/>
+            <van-icon name="chat-o" size="30px" bind:click="getqqNum" data-qqnum="{{item.qqnum}}" class="icon-chato"/>
+            <van-icon name="contact" size="30px" bind:click="getwxNum" data-wxnum="{{item.wxnum}}" class="icon-contac"/>
+            <van-icon name="phone-o" size="30px" bind:click="getphoneNum" 
+            data-phonenum="{{item.phonenum}}" class="icon-phone"/>
+            <van-icon name="star-o" size="30px" bind:click="addcollection" data-item="{{item}}" class="icon-star"/>
+          </view>
+        </view>
+        <view class="home-list-spacing"></view>
+      </view>
+  </van-tab>       
+  <van-tab title="书籍">
+    <view class = "home-list" wx:for="{{dataList}}" wx:key="index">
+        <view class="home-list-good">
+          <!-- 顶部信息 -->
+          <view class = "home-list-good-top">
+            <!-- 后面可以通过img组件来显示 -->
+            <view class = "home-list-good-head">
+              <van-image round width="100rpx" height="100rpx" fit="fill" src="{{item.headimg}}"></van-image>
+            </view>
+            <view class = home-list-good-up>
+              <view class="home-list-good-up-name">
+              {{item.publisher}}
+              </view>
+              <view class="home-list-good-up-date">
+              {{item.time}}
+              </view>
+            </view>
+            <view class = "home-list-good-price">
+              ¥{{item.price}}
+            </view>
+          </view>
+        <!-- 信息主要部分-->
+        <view class = "home-list-good-details">
+            <view class="home-list-good-details-information">{{item.information}}</view>
+              <view wx:for="{{item.imageFileList}}" wx:for-item="item1" wx:key="index" class="home-list-good-details-image">
+            <image width = "180rpx" height = "180rpx" src="{{item1.url}}" bindtap="toPreview" data-imageFileList="{{item.imageFileList}}" data-index="{{index}}"></image>
+            </view>
+          </view>
+          <!-- 功能图标模块 -->
+          <view class="home-list-good-contact">
+            <van-icon name="chat-o" size="30px" bind:click="getqqNum" data-qqnum="{{item.qqnum}}" class="icon-chato"/>
+            <van-icon name="contact" size="30px" bind:click="getwxNum" data-wxnum="{{item.wxnum}}" class="icon-contac"/>
+            <van-icon name="phone-o" size="30px" bind:click="getphoneNum" 
+            data-phonenum="{{item.phonenum}}" class="icon-phone"/>
+            <van-icon name="star-o" size="30px" bind:click="addcollection" data-item="{{item}}" class="icon-star"/>
+          </view>
+        </view>
+        <view class="home-list-spacing"></view>
+      </view>  
+  </van-tab>
+  <van-tab title="日用品"> 
+  <view class = "home-list" wx:for="{{dataList}}" wx:key="index">
+        <view class="home-list-good">
+          <!-- 顶部信息 -->
+          <view class = "home-list-good-top">
+            <!-- 后面可以通过img组件来显示 -->
+            <view class = "home-list-good-head">
+              <van-image round width="100rpx" height="100rpx" fit="fill" src="{{item.headimg}}"></van-image>
+            </view>
+            <view class = home-list-good-up>
+              <view class="home-list-good-up-name">
+              {{item.publisher}}
+              </view>
+              <view class="home-list-good-up-date">
+              {{item.time}}
+              </view>
+            </view>
+            <view class = "home-list-good-price">
+              ¥{{item.price}}
+            </view>
+          </view>
+        <!-- 信息主要部分-->
+        <view class = "home-list-good-details">
+            <view class="home-list-good-details-information">{{item.information}}</view>
+              <view wx:for="{{item.imageFileList}}" wx:for-item="item1" wx:key="index" class="home-list-good-details-image">
+            <image width = "180rpx" height = "180rpx" src="{{item1.url}}" bindtap="toPreview" data-imageFileList="{{item.imageFileList}}" data-index="{{index}}"></image>
+            </view>
+          </view>
+          <!-- 功能图标模块 -->
+          <view class="home-list-good-contact">
+            <van-icon name="chat-o" size="30px" bind:click="getqqNum" data-qqnum="{{item.qqnum}}" class="icon-chato"/>
+            <van-icon name="contact" size="30px" bind:click="getwxNum" data-wxnum="{{item.wxnum}}" class="icon-contac"/>
+            <van-icon name="phone-o" size="30px" bind:click="getphoneNum" 
+            data-phonenum="{{item.phonenum}}" class="icon-phone"/>
+            <van-icon name="star-o" size="30px" bind:click="addcollection" data-item="{{item}}" class="icon-star"/>
+          </view>
+        </view>
+        <view class="home-list-spacing"></view>
+      </view>
+  </van-tab>
+  <van-tab title="数码"> 
+  <view class = "home-list" wx:for="{{dataList}}" wx:key="index">
+        <view class="home-list-good">
+          <!-- 顶部信息 -->
+          <view class = "home-list-good-top">
+            <!-- 后面可以通过img组件来显示 -->
+            <view class = "home-list-good-head">
+              <van-image round width="100rpx" height="100rpx" fit="fill" src="{{item.headimg}}"></van-image>
+            </view>
+            <view class = home-list-good-up>
+              <view class="home-list-good-up-name">
+              {{item.publisher}}
+              </view>
+              <view class="home-list-good-up-date">
+              {{item.time}}
+              </view>
+            </view>
+            <view class = "home-list-good-price">
+              ¥{{item.price}}
+            </view>
+          </view>
+        <!-- 信息主要部分-->
+        <view class = "home-list-good-details">
+            <view class="home-list-good-details-information">{{item.information}}</view>
+              <view wx:for="{{item.imageFileList}}" wx:for-item="item1" wx:key="index" class="home-list-good-details-image">
+            <image width = "180rpx" height = "180rpx" src="{{item1.url}}" bindtap="toPreview" data-imageFileList="{{item.imageFileList}}" data-index="{{index}}"></image>
+            </view>
+          </view>
+          <!-- 功能图标模块 -->
+          <view class="home-list-good-contact">
+            <van-icon name="chat-o" size="30px" bind:click="getqqNum" data-qqnum="{{item.qqnum}}" class="icon-chato"/>
+            <van-icon name="contact" size="30px" bind:click="getwxNum" data-wxnum="{{item.wxnum}}" class="icon-contac"/>
+            <van-icon name="phone-o" size="30px" bind:click="getphoneNum" 
+            data-phonenum="{{item.phonenum}}" class="icon-phone"/>
             <van-icon name="star-o" size="30px" bind:click="addcollection" class="icon-star"/>
           </view>
         </view>
         <view class="home-list-spacing"></view>
       </view>
-
-
-
+  </van-tab>
+  <van-tab title="服装">
+    <view class = "home-list" wx:for="{{dataList}}" wx:key="index">
+        <view class="home-list-good">
+          <!-- 顶部信息 -->
+          <view class = "home-list-good-top">
+            <!-- 后面可以通过img组件来显示 -->
+            <view class = "home-list-good-head">
+              <van-image round width="100rpx" height="100rpx" fit="fill" src="{{item.headimg}}"></van-image>
+            </view>
+            <view class = home-list-good-up>
+              <view class="home-list-good-up-name">
+              {{item.publisher}}
+              </view>
+              <view class="home-list-good-up-date">
+              {{item.time}}
+              </view>
+            </view>
+            <view class = "home-list-good-price">
+              ¥{{item.price}}
+            </view>
+          </view>
+        <!-- 信息主要部分-->
+        <view class = "home-list-good-details">
+            <view class="home-list-good-details-information">{{item.information}}</view>
+              <view wx:for="{{item.imageFileList}}" wx:for-item="item1" wx:key="index" class="home-list-good-details-image">
+            <image width = "180rpx" height = "180rpx" src="{{item1.url}}" bindtap="toPreview" data-imageFileList="{{item.imageFileList}}" data-index="{{index}}"></image>
+            </view>
+          </view>
+          <!-- 功能图标模块 -->
+          <view class="home-list-good-contact">
+            <van-icon name="chat-o" size="30px" bind:click="getqqNum" data-qqnum="{{item.qqnum}}" class="icon-chato"/>
+            <van-icon name="contact" size="30px" bind:click="getwxNum" data-wxnum="{{item.wxnum}}" class="icon-contac"/>
+            <van-icon name="phone-o" size="30px" bind:click="getphoneNum" 
+            data-phonenum="{{item.phonenum}}" class="icon-phone"/>
+            <van-icon name="star-o" size="30px" bind:click="addcollection" data-item="{{item}}" class="icon-star"/>
+          </view>
+        </view>
+        <view class="home-list-spacing"></view>
+      </view>
+  </van-tab>
+  <van-tab title="车类">
+    <view class = "home-list" wx:for="{{dataList}}" wx:key="index">
+        <view class="home-list-good">
+          <!-- 顶部信息 -->
+          <view class = "home-list-good-top">
+            <!-- 后面可以通过img组件来显示 -->
+            <view class = "home-list-good-head">
+              <van-image round width="100rpx" height="100rpx" fit="fill" src="{{item.headimg}}"></van-image>
+            </view>
+            <view class = home-list-good-up>
+              <view class="home-list-good-up-name">
+              {{item.publisher}}
+              </view>
+              <view class="home-list-good-up-date">
+              {{item.time}}
+              </view>
+            </view>
+            <view class = "home-list-good-price">
+              ¥{{item.price}}
+            </view>
+          </view>
+        <!-- 信息主要部分-->
+        <view class = "home-list-good-details">
+            <view class="home-list-good-details-information">{{item.information}}</view>
+              <view wx:for="{{item.imageFileList}}" wx:for-item="item1" wx:key="index" class="home-list-good-details-image">
+            <image width = "180rpx" height = "180rpx" src="{{item1.url}}" bindtap="toPreview" data-imageFileList="{{item.imageFileList}}" data-index="{{index}}"></image>
+            </view>
+          </view>
+          <!-- 功能图标模块 -->
+          <view class="home-list-good-contact">
+            <van-icon name="chat-o" size="30px" bind:click="getqqNum" data-qqnum="{{item.qqnum}}" class="icon-chato"/>
+            <van-icon name="contact" size="30px" bind:click="getwxNum" data-wxnum="{{item.wxnum}}" class="icon-contac"/>
+            <van-icon name="phone-o" size="30px" bind:click="getphoneNum" 
+            data-phonenum="{{item.phonenum}}" class="icon-phone"/>
+            <van-icon name="star-o" size="30px" bind:click="addcollection" data-item="{{item}}" class="icon-star"/>
+          </view>
+        </view>
+        <view class="home-list-spacing"></view>
+      </view>
+  </van-tab>
+  </van-tabs>
+</view>
